c4prj2_input/grade.txt
Grading at Mon Dec  7 11:08:31 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘getsub’:
input.c:28:5: error: too many arguments to function ‘strcpy’
     strcpy(ans, str+idx, n);
     ^
Compilation of input.c failed

Overall Grade: F
